# 10101

./: .dir-locals.el  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RELEASE.md  SECURITY.md  bors.toml  check_compatibility.sh  docker-compose.yml  dprint.json  justfile  pubspec.yaml  rust-toolchain.toml  rustfmt.toml
coordinator/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  readme.md
coordinator/docker/: Dockerfile
coordinator/example-settings/: prod-coordinator-settings.toml  test-coordinator-settings.toml
coordinator/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
coordinator/migrations/2023-02-17-022106_create_order/: down.sql  up.sql
coordinator/migrations/2023-03-13-042727_extend-order/: down.sql  up.sql
coordinator/migrations/2023-04-12-132507_order-expiry/: down.sql  up.sql
coordinator/migrations/2023-04-12-184910_positions/: down.sql  up.sql
coordinator/migrations/2023-04-17-185626_create_users/: up.sql
coordinator/migrations/2023-05-01-180223_trades/: down.sql  up.sql
coordinator/migrations/2023-05-02-125304_rename_trades_column/: down.sql  up.sql
coordinator/migrations/2023-07-10-060130_users_index/: down.sql  up.sql
coordinator/migrations/2023-07-10-060138_payments/: down.sql  up.sql
coordinator/migrations/2023-07-11-104904_create_channels/: down.sql  up.sql
coordinator/migrations/2023-07-12-040736_spendable_outputs/: down.sql  up.sql
coordinator/migrations/2023-07-13-010237_trade_position_not_null/: down.sql  up.sql
coordinator/migrations/2023-07-13-010300_trade_fees/: down.sql  up.sql
coordinator/migrations/2023-07-14-043111_routing_fees/: down.sql  up.sql
coordinator/migrations/2023-07-18-045732_open_channel_transaction_fee_payment/: down.sql  up.sql
coordinator/migrations/2023-07-19-055140_associate_position_with_dlc/: down.sql  up.sql
coordinator/migrations/2023-07-19-055143_closed_positions/: down.sql  up.sql
coordinator/migrations/2023-07-20-055142_unrealized_pnl_positions/: down.sql  up.sql
coordinator/migrations/2023-07-21-050135_closing_price_positions/: down.sql  up.sql
coordinator/migrations/2023-07-27-020530_intercept_id_channels/: down.sql  up.sql
coordinator/migrations/2023-08-18-105400_rollover_dlc/: down.sql  up.sql
coordinator/migrations/2023-08-22-224322_add_position_expiry_to_order/: up.sql
coordinator/migrations/2023-08-23-152802_add_invoice_to_payments/: up.sql
coordinator/migrations/2023-08-28-082948_add_raw_tx_field/: down.sql  up.sql
coordinator/migrations/2023-09-04-155338_add-fee-to-payments/: up.sql
coordinator/migrations/2023-09-05-011803_add_fcm_token_to_users/: down.sql  up.sql
coordinator/migrations/2023-09-08-090152_add_order_state/: down.sql  up.sql
coordinator/migrations/2023-09-08-090153_add_matches/: down.sql  up.sql
coordinator/migrations/2023-09-08-090154_add_contract_symbol_and_leverage_to_orders/: down.sql  up.sql
coordinator/migrations/2023-09-08-090155_add_order_reason/: down.sql  up.sql
coordinator/migrations/2023-09-08-090156_remove_taken/: down.sql  up.sql
coordinator/migrations/2023-09-22-145256_unique_pubkey/: down.sql  up.sql
coordinator/migrations/2023-09-22-222049_create_waitlist/: down.sql  up.sql
coordinator/migrations/2023-09-28-163500_liquidity_options/: down.sql  up.sql
coordinator/migrations/2023-10-02-163500_add_coordinator_leverage_to_position/: down.sql  up.sql
coordinator/migrations/2023-10-02-164500_remove_fake_scid/: down.sql  up.sql
coordinator/migrations/2023-10-03-210600_rename_inbound_outbound/: down.sql  up.sql
coordinator/migrations/2023-10-04-222654_add_liquidity_request_logs_table/: down.sql  up.sql
coordinator/migrations/2023-10-10-224902_add_last_login_to_users/: down.sql  up.sql
coordinator/migrations/2023-10-11-095109_rename_collateral_in_position/: down.sql  up.sql
coordinator/migrations/2023-10-11-095830_rename_levarage/: down.sql  up.sql
coordinator/migrations/2023-10-11-104835_add_trader_margin_to_positions/: down.sql  up.sql
coordinator/migrations/2023-10-12-122307_add_table_for_collaborative_reverts/: down.sql  up.sql
coordinator/migrations/2023-10-16-113322_add_stable_flag/: down.sql  up.sql
coordinator/src/: admin.rs  backup.rs  campaign.rs  check_version.rs  cli.rs  collaborative_revert.rs  config.rs  db.rs  dlc_handler.rs  dlc_protocol.rs  emergency_kit.rs  funding_fee.rs  leaderboard.rs  lib.rs  logger.rs  main.rs  message.rs  metrics.rs  node.rs  notification_service.rs  notifications.rs  payout_curve.rs  referrals.rs  rollover.rs  routes.rs  scheduler.rs  schema.rs  settings.rs  storage.rs
crates/bdk-ldk/: Cargo.toml
crates/bitmex-client/: Cargo.toml
crates/bitmex-stream/: Cargo.toml
crates/commons/: Cargo.toml
crates/coordinator-commons/: Cargo.toml
crates/coordintator-commons/: Cargo.toml
crates/dev-maker/: Cargo.toml  bitmex_hourly_rates.json  fetch_rates.sh
crates/fund/: Cargo.toml
crates/lightning-transaction-sync/: Cargo.toml
crates/ln-dlc-node/: Cargo.toml
crates/ln-dlc-node-tests/: Cargo.toml
crates/ln-dlc-storage/: Cargo.toml
crates/lnd-bridge/: Cargo.toml
crates/mempool-space/: Cargo.toml
crates/orderbook-client/: Cargo.toml
crates/orderbook-commons/: Cargo.toml
crates/payout_curve/: .gitignore  Cargo.toml
crates/tests-e2e/: Cargo.toml
crates/tokio-extras/: Cargo.toml
crates/trade/: Cargo.toml
crates/xtras/: Cargo.toml
crates/xxi-node/: Cargo.toml
docs/: nfr.adoc  (+17 more)
maker/: .dockerignore  Cargo.toml  Dockerfile  readme.md
maker/src/: cli.rs  health.rs  lib.rs  ln.rs  logger.rs  metrics.rs  orderbook_ws.rs  position.rs  probing.rs  routes.rs  schema.rs  storage.rs  trading.rs
mobile/native/: Cargo.toml  readme.md
orderbook/: .env  Cargo.toml  docker-compose.yml  readme.md
orderbook/src/: lib.rs
webapp/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
webapp/certs/: cert.pem  key.pem
webapp/frontend/: .fvmrc  pubspec.yaml
webapp/src/: api.rs  auth.rs  cli.rs  logger.rs  main.rs  session.rs  subscribers.rs
(+1136 files in other folders)
