[workspace]
members = ["coordinator", "maker", "mobile/native", "crates/*", "webapp"]
default-members = [
  "coordinator",
  "maker",
  "mobile/native",
  "crates/bitmex-client",
  "crates/bitmex-stream",
  "crates/commons",
  "crates/ln-dlc-node",
  "crates/orderbook-client",
  "crates/trade",
  "crates/payout_curve",
  "crates/fund",
  "webapp",
]

resolver = "2"

[patch.crates-io]
# We should usually track the `p2pderivatives/feature/ln-dlc-channels[-10101]` branch.
#
# We are currently depending on one patch that will _not_ be merged into
# `p2pderivatives/rust-dlc#feature/ln-dlc-channels`: 4e104b4. This patch ensures backwards
# compatibility for 10101 through the `rust-lightning:0.0.116` upgrade. We will be able to drop it
# once all users have been upgraded and traded once.
dlc-manager = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "ba68a7bc5db4bdafb24f27fd485507fbf4322f81" }
dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "ba68a7bc5db4bdafb24f27fd485507fbf4322f81" }
dlc = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "ba68a7bc5db4bdafb24f27fd485507fbf4322f81" }
p2pd-oracle-client = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "ba68a7bc5db4bdafb24f27fd485507fbf4322f81" }
dlc-trie = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "ba68a7bc5db4bdafb24f27fd485507fbf4322f81" }

# We should usually track the `p2pderivatives/split-tx-experiment[-10101]` branch. For now we depend on a special fork which removes a panic in rust-lightning
lightning = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-background-processor = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-transaction-sync = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-net-tokio = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-persister = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-rapid-gossip-sync = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }

rust-bitcoin-coin-selection = { git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection" }

# Waiting for the next release.
xtra = { git = "https://github.com/Restioson/xtra/", rev = "d98393a" }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
