[workspace]
members = ["coordinator", "mobile/native", "crates/*", "webapp"]
default-members = [
  "coordinator",
  "mobile/native",
  "crates/bitmex-client",
  "crates/bitmex-stream",
  "crates/xxi-node",
  "crates/orderbook-client",
  "crates/payout_curve",
  "crates/fund",
  "crates/dev-maker",
  "webapp",
]

resolver = "2"

[patch.crates-io]
# We are using our own fork of `rust-dlc` at least until we can drop all the LN-DLC features. Also,
# `p2pderivatives/rust-dlc#master` is missing certain patches that can only be found in the LN-DLC
# branch.
dlc-manager = { git = "https://github.com/get10101/rust-dlc", rev = "8d9920d" }
dlc-messages = { git = "https://github.com/get10101/rust-dlc", rev = "8d9920d" }
dlc = { git = "https://github.com/get10101/rust-dlc", rev = "8d9920d" }
p2pd-oracle-client = { git = "https://github.com/get10101/rust-dlc", rev = "8d9920d" }
dlc-trie = { git = "https://github.com/get10101/rust-dlc", rev = "8d9920d" }

# We should usually track the `p2pderivatives/split-tx-experiment[-10101]` branch. For now we depend
# on a special fork which removes a panic in `rust-lightning`.
lightning = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-background-processor = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-transaction-sync = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }
lightning-persister = { git = "https://github.com/bonomat/rust-lightning-p2p-derivatives", rev = "e49030e" }

rust-bitcoin-coin-selection = { git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection" }

esplora-client = { git = "https://github.com/bitcoindevkit/rust-esplora-client", rev = "269360f" }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
