[package]
name = "coordinator"
version = "1.8.6"
edition = "2021"

[dependencies]
atty = "0.2.14"
bitcoin = "0.29.2"
console-subscriber = "0.1.6"
diesel_migrations = "2.0.0"
dlc = "0.4.0"
dlc-messages = "0.4.0"
dlc-trie = "0.4.0"
fcm = "0.9.2"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4.0"
lightning-persister = "0.0.117"
local-ip-address = "0.5.1"
opentelemetry = "0.19.0"
opentelemetry-prometheus = "0.12.0"
prometheus = "0.13.3"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1"
sled = "0.34"
thiserror = "1.0"
tokio-metrics = "0.2.2"
toml = "0.8"
tracing = "0.1.37"
url = "2.3.1"

[dependencies.ln-dlc-storage]
path = "../crates/ln-dlc-storage"

[dependencies.tokio-util]
version = "0.7"
features = ["io"]

[dependencies.tokio-cron-scheduler]
version = "0.9.4"

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.axum]
version = "0.6.20"
features = ["ws", "query", "multipart"]

[dependencies.bdk]
version = "0.28.0"
default-features = false
features = ["key-value-db", "use-esplora-blocking"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.commons]
path = "../crates/commons"

[dependencies.diesel]
version = "2.0.0"
features = ["r2d2", "postgres", "time", "uuid"]

[dependencies.dlc-manager]
version = "0.4.0"
features = ["use-serde"]

[dependencies.lightning]
version = "0.0.117"
features = ["max_level_trace"]

[dependencies.lightning-invoice]
version = "0.25"

[dependencies.ln-dlc-node]
path = "../crates/ln-dlc-node"

[dependencies.openssl]
version = "0.10.60"
features = ["vendored"]

[dependencies.parking_lot]
version = "0.12.1"

[dependencies.rust_decimal]
version = "1"
features = ["serde-with-float"]

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.time]
version = "0.3"
features = [
  "serde",
  "parsing",
  "std",
  "formatting",
  "macros",
  "serde-well-known",
]

[dependencies.tokio]
version = "1"
features = ["full", "tracing"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"]

[dependencies.trade]
path = "../crates/trade"

[dependencies.payout_curve]
path = "../crates/payout_curve"

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "serde"]

[dev-dependencies]
rust_decimal_macros = "1"
testcontainers = "0.14.0"
