[package]
name = "coordinator"
version = "2.1.1"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
atty = "0.2.14"
axum = { version = "0.6.20", features = ["ws", "query", "multipart"] }
bdk = { version = "1.0.0-alpha.6", features = ["std"] }
bdk_file_store = "0.6"
bitcoin = { version = "0.30" }
bitcoin_old = { package = "bitcoin", version = "0.29.2" }
clap = { version = "4", features = ["derive"] }
commons = { path = "../crates/commons" }
console-subscriber = "0.1.6"
diesel = { version = "2.0.0", features = ["r2d2", "postgres", "time", "uuid"] }
diesel_migrations = "2.0.0"
dlc = "0.4.0"
dlc-manager = { version = "0.4.0", features = ["use-serde"] }
dlc-messages = "0.4.0"
dlc-trie = "0.4.0"
fcm = "0.9.2"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4.0"
lightning = { version = "0.0.117", features = ["max_level_trace"] }
lightning-invoice = { version = "0.25" }
lightning-persister = "0.0.117"
ln-dlc-node = { path = "../crates/ln-dlc-node", features = ["ln_net_axum_ws"] }
ln-dlc-storage = { path = "../crates/ln-dlc-storage" }
local-ip-address = "0.5.1"
openssl = { version = "0.10.60", features = ["vendored"] }
opentelemetry = "0.19.0"
opentelemetry-prometheus = "0.12.0"
parking_lot = { version = "0.12.1" }
payout_curve = { path = "../crates/payout_curve" }
prometheus = "0.13.3"
rand = "0.8.5"
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
semver = "1.0"
serde = "1.0.147"
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
sled = "0.34"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "parsing", "std", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-cron-scheduler = { version = "0.9.4" }
tokio-metrics = "0.2.2"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
trade = { path = "../crates/trade" }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
insta = "1"
proptest = "1"
rust_decimal_macros = "1"
testcontainers = "0.14.0"
