[package]
name = "maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-stream = "0.3"
atty = "0.2.14"
axum = { version = "0.6.7", features = ["ws"] }
bdk = { version = "0.24.0", features = ["key-value-db"] }
bitcoin = "0.29"
bitmex-stream = { path = "../crates/bitmex-stream" }
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.0.0", features = ["r2d2", "postgres"] }
diesel_migrations = "2.0.0"
futures = "0.3"
hex = "0.4.3"
ln-dlc-node = { path = "../crates/ln-dlc-node" }
rand = "0.8.5"
reqwest = "0.11.14"
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
serde = "1.0.147"
serde_json = "1"
time = { version = "0.3", features = ["serde", "parsing", "std", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
trade = { path = "../crates/trade" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
rust_decimal_macros = "1"
testcontainers = "0.14.0"
