[package]
name = "maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-stream = "0.3"
async-trait = "0.1"
atty = "0.2.14"
autometrics = { version = "0.5", features = ["prometheus-exporter"] }
axum = { version = "0.6.7", features = ["ws"] }
bdk = { version = "0.28.0", default-features = false, features = ["key-value-db", "use-esplora-blocking"] }
bitcoin = "0.29.2"
bitmex-client = { path = "../crates/bitmex-client" }
bitmex-stream = { path = "../crates/bitmex-stream" }
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.0.0", features = ["r2d2", "postgres"] }
diesel_migrations = "2.0.0"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4.0"
lightning = { version = "0.0.116", features = ["max_level_trace"] }
ln-dlc-node = { path = "../crates/ln-dlc-node" }
# adding this as explicit dependency as we need the "vendored" flag for cross compilation
openssl = { version = "0.10.55", features = ["vendored"] }
opentelemetry = "0.19.0"
opentelemetry-prometheus = "0.12.0"
orderbook-client = { path = "../crates/orderbook-client" }
orderbook-commons = { path = "../crates/orderbook-commons" }
prometheus = "0.13.3"
rand = "0.8.5"
reqwest = "0.11.14"
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
serde = "1.0.147"
serde_json = "1"
time = { version = "0.3", features = ["serde", "parsing", "std", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
trade = { path = "../crates/trade" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
xtra = { version = "0.6", features = ["instrumentation", "sink"] }

[dev-dependencies]
rust_decimal_macros = "1"
