[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
atty = "0.2.14"
axum = { version = "0.6.7", features = ["ws"] }
diesel = { version = "2.0.0", features = ["r2d2", "postgres"] }
diesel_migrations = "2.0.0"
dotenv = "0.15"
futures = "0.3"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
time = { version = "0.3", features = ["serde", "parsing", "std", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
uuid = { version = "1.3.0", features = ["serde"] }

[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"
testcontainers = "0.14.0"
