[package]
name = "bdk-ldk"
version = "0.1.0"
authors = ["John Cantrell <johncantrell97@gmail.com>"]
documentation = "https://docs.rs/bdk_ldk"
edition = "2021"
homepage = "https://github.com/johncantrell97/bdk-ldk"
keywords = ["bitcoin", "lightning", "bdk", "ldk", "wallet"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/johncantrell97/bdk-ldk"
description = "Use your bdk wallet to implement ldk lightning functionality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bdk = "0.24"
lightning = { version = "0.0.113", features = ["max_level_trace"] }
serde_json = "1.0.87"
thiserror = "1"
tracing = "0.1"
