[package]
name = "bitmex-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_urlencoded = "0.7"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1", features = ["serde"] }
