[package]
name = "commons"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitcoin = { version = "0.30", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
secp256k1 = { version = "0.27.0", features = ["serde"] }
secp256k1-zkp = { version = "0.7.0", features = ["global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
time = { version = "0.3", features = ["serde", "std"] }
tokio-tungstenite-wasm = { version = "0.3.0" }
trade = { path = "../trade" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
secp256k1 = { version = "0.27.0", features = ["serde", "rand", "global-context"] }
