[package]
name = "dev-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
commons = { path = "../commons" }
reqwest = { version = "0.11" }
rust_decimal = { version = "1", features = ["serde-with-float"] }
secp256k1 = { version = "0.27.0", features = ["serde", "rand", "global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "tracing-log"] }
trade = { path = "../trade" }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
