[package]
name = "lightning-transaction-sync"
version = "0.0.114"
authors = ["Elias Rohrer"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "http://github.com/lightningdevkit/rust-lightning"
description = """
Utilities for syncing LDK via the transaction-based `Confirm` interface.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
esplora-async = ["async-interface", "esplora-client/async", "futures"]
esplora-blocking = ["esplora-client/blocking"]
async-interface = []

[dependencies]
bdk-macros = "0.6"
bitcoin = { version = "0.29.0", default-features = false }
esplora-client = { version = "0.3.0", default-features = false, optional = true }
futures = { version = "0.3", optional = true }
lightning = { version = "0.0.113", default-features = false }

[dev-dependencies]
electrsd = { version = "0.22.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_23_0"] }
electrum-client = "0.12.0"
lightning = { version = "0.0.113", features = ["std"] }
once_cell = "1.16.0"
tokio = { version = "1.14.0", features = ["full"] }
