[package]
name = "ln-dlc-node-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1"
bitcoin = "0.29"
ln-dlc-node = { path = "../ln-dlc-node" }
dlc-manager = { version = "0.4.0", features = ["use-serde"] }
dlc-messages = { version = "0.4.0" }
dlc-trie = { version = "0.4.0" }
futures = "0.3"
hex = "0.4"
lightning = { version = "0.0.114", features = ["max_level_trace"] }
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rust_decimal = "1"
serde = "1.0.147"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[features]
load_tests = []
