[package]
name = "ln-dlc-node"
version = "0.1.0"
edition = "2021"
description = "A common interface for using Lightning and DLC channels side-by-side."

[lib]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1.71"
autometrics = "0.5"
bdk = { version = "0.28.0", default-features = false, features = ["key-value-db", "use-esplora-blocking", "std"] }
bip39 = { version = "2", features = ["rand_core"] }
bitcoin = "0.29.2"
dlc = { version = "0.4.0" }
dlc-manager = { version = "0.4.0", features = ["use-serde"] }
dlc-messages = { version = "0.4.0" }
dlc-sled-storage-provider = { version = "0.1.0", features = ["wallet"] }
dlc-trie = { version = "0.4.0" }
esplora-client = { version = "0.4", default-features = false }
futures = "0.3"
hex = "0.4"
hkdf = "0.12"
lightning = { version = "0.0.116", features = ["max_level_trace", "std"] }
lightning-background-processor = { version = "0.0.116", features = ["futures"] }
lightning-invoice = { version = "0.24" }
lightning-net-tokio = { version = "0.0.116" }
lightning-persister = { version = "0.0.116" }
lightning-transaction-sync = { version = "0.0.116", features = ["esplora-blocking"] }
log = "0.4.17"
p2pd-oracle-client = { version = "0.1.0" }
parking_lot = { version = "0.12.1" }
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rust-bitcoin-coin-selection = { version = "0.1.0", features = ["rand"] }
rust_decimal = "1"
secp256k1-zkp = { version = "0.7.0", features = ["global-context"] }
serde = "1.0.147"
serde_with = "3.1.0"
sha2 = "0.10"
simple-wallet = "0.1.0"
time = "0.3"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "tracing"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
ureq = "2.5.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
time = { version = "0.3", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[features]
load_tests = []
