[package]
name = "ln-dlc-node"
version = "0.1.0"
edition = "2021"
description = "A common interface for using Lightning and DLC channels side-by-side."

[lib]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1.71"
bdk = { version = "1.0.0-alpha.6", features = ["std"] }
bdk_coin_select = "0.2.0"
bdk_esplora = { version = "0.8.0" }
bip39 = { version = "2", features = ["rand_core"] }
bitcoin = { version = "0.30" }
bitcoin_old = { package = "bitcoin", version = "0.29.2" }
cfg-if = "1.0.0"
dlc = { version = "0.4.0" }
dlc-manager = { version = "0.4.0", features = ["use-serde"] }
dlc-messages = { version = "0.4.0" }
dlc-trie = { version = "0.4.0" }
futures = "0.3"
hex = "0.4"
hkdf = "0.12"
lightning = { version = "0.0.117", features = ["max_level_trace", "std"] }
lightning-background-processor = { version = "0.0.117", features = ["futures"] }
lightning-invoice = { version = "0.25" }
lightning-persister = { version = "0.0.117" }
lightning-rapid-gossip-sync = { version = "0.0.117" }
lightning-transaction-sync = { version = "0.0.117", features = ["esplora-blocking"] }
ln-dlc-storage = { path = "../../crates/ln-dlc-storage" }
log = "0.4.17"
mempool = { path = "../../crates/mempool" }
p2pd-oracle-client = { version = "0.1.0" }
parking_lot = { version = "0.12.1" }
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rust-bitcoin-coin-selection = { version = "0.1.0", features = ["rand"] }
rust_decimal = "1"
secp256k1-zkp = { version = "0.7.0", features = ["global-context"] }
serde = "1.0.147"
serde_with = "3.1.0"
sha2 = "0.10"
thiserror = "1"
time = "0.3"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time", "tracing"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
ureq = "2.5.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

axum = { version = "0.6", features = ["ws"], optional = true }
tokio-tungstenite-wasm = { version = "0.3.0", features = ["native-tls"], optional = true }

# To enable JS support when compiling under wasm
[dependencies.getrandom]
version = "*"
features = ["js"] # Has no effect on other targets

[dev-dependencies]
time = { version = "0.3", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[features]
default = ["ln_net_tcp"]
load_tests = []
ln_net_axum_ws = ["dep:axum"]
ln_net_ws = ["dep:tokio-tungstenite-wasm"]
ln_net_tcp = ["tokio/net"]
