[package]
name = "ln-dlc-storage"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1"
bitcoin = "0.29"
dlc-manager = { version = "0.4.0", features = ["use-serde"] }
hex = "0.4"
lightning = { version = "0.0.116" }
log = "0.4.14"
parking_lot = { version = "0.12.1" }
secp256k1-zkp = "0.7"
serde = "1.0"
serde_json = "1.0"
sled = "0.34"
tracing = "0.1.37"
